# pyCurves

./: LICENSE  MANIFEST.in  README.md  install_pycurves.py  pycurves.py  pycurves_md.py  pycurves_md_batch.py  pycurves_md_plot.py  pycurves_viewer.py  pyproject.toml
pycurves_dna.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pycurves_lib/: __init__.py  curves_wrapper.py
pycurves_lib/cli/: pycurves_cli_options.py
pycurves_lib/core/: curves_analyzer.py  curves_calculator.py  curves_dataclasses.py  curves_groove.py  curves_optimizer_jax.py  curvesplus_axis.py  parameter_conventions.py
pycurves_lib/io/: base_reference.py  curves_config_loader.py  curves_mol_loader.py  curves_output.py  curves_visualization_payload.py
pycurves_lib/md/: batch_curvesplus.py  batch_groove.py  trajectory_loader.py  trajectory_statistics.py
pycurves_lib/topology/: __init__.py  base_annotations.py  topology_inferrer.py
test_data/: 1A6Y.cif  1MOW.cif  1OH6.cif  1QNB.cif  2MJX.cif  456D.cif  4F8G.cif  5JGH.cif  5wx9.cif  7AIB.cif  8ZD8.cif  9DR9.cif  9NE6.cif  9OW8.cif
tests/: test_mini_workflow.py
