[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycurves-dna"
version = "0.1.0"
description = "Python implementation and extension of Curves-style DNA/RNA helical analysis."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "pyCurves contributors" }
]
keywords = ["DNA", "RNA", "helical parameters", "Curves", "Curves+", "3DNA"]
dependencies = [
  "gemmi>=0.6",
  "jax>=0.4",
  "networkx>=3.0",
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "tqdm>=4.65",
]

[project.optional-dependencies]
all = [
  "MDAnalysis>=2.6",
  "mdtraj>=1.9",
  "numba>=0.59",
  "ijson>=3.2",
  "matplotlib>=3.7",
  "python-dateutil>=2.8",
  "biopython>=1.81",
]
dev = [
  "build>=1.0",
]

[project.scripts]
pycurves = "pycurves:main"
pycurves-md = "pycurves_md:main"
pycurves-md-batch = "pycurves_md_batch:main"
pycurves-md-plot = "pycurves_md_plot:main"
pycurves-viewer = "pycurves_viewer:main"
pycurves-pymol = "pycurves_pymol:main"

[tool.setuptools]
py-modules = [
  "pycurves",
  "pycurves_md",
  "pycurves_md_batch",
  "pycurves_md_plot",
  "pycurves_viewer",
  "pycurves_pymol",
  "process_dna",
]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pycurves_lib*"]

[tool.setuptools.package-data]
"pycurves_lib.data" = [
  "modified_to_change_data.json",
  "reference/*.lib",
]
